Updated README and added SONAR_WEB_ADDL_OPTS